# ccisserver

./: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build-conf/: CMakeList.txt-for-local  CMakeList.txt-for-lp  control-for-local  control-for-lp  srcCMakeList.txt-for-local
debian/: ccisserver.postinst  ccisserver.preinst  changelog  copyright  install  rules
doc/: README.c  目录说明
lib/: bash.bashrc  libhtmlstreamparser.so.0.0.0
res/certs/: cacert.pem  sslclientcert.pem  sslclientkey.pem  sslservercert.pem  sslserverkey.pem
script/: CCISServer-manager  CCISServer.service  backup-for-local.sh  backup-for-lp.sh  base64function  clean_makefile  copy_current_conf  local-configure  lp-configure
src/: CMakeLists.txt  Makefile  TODO  ccis.h  cmake_install.cmake  main.c  type.h  version
src/camera/: FaceMatcher.c  FaceMatcher.h  FaceMatcherDll.h  fdreadimage.h
src/client/: client_login.c  client_login.h
src/configure/: CCISServer.conf  configure.c  configure.h
src/database/: dbquery.c  dbquery.h  sql_pool.c  sql_pool.h
src/log/: 30-ccisserver.conf  ccis_log.h  ccisserverlog  log.c
src/network/: network.c  network.h
src/network/ssl/: connect.c  connect.h  ssl.c  ssl.h
src/other/: ccis_charset.c  ccis_charset.h  ccis_common.c  ccis_common.h  ccis_compress.c  ccis_compress.h  ccis_string.c  ccis_string.h  ccis_system.c  ccis_system.h  ccis_thread.c  ccis_thread.h  ccis_time.c  ccis_time.h
src/plugins/: monitor.c  monitor.h  register.h  tpm_register.c  ukey_register.c
src/schedule/: Flow.conf  business_schedule.c  client_schedule.c  flow_control.c  flow_control.h  global_schedule.c  global_schedule.h
src/schedule/epoll/: ccis_epoll.c  ccis_epoll.h
src/security/: security.c  security.h
src/security/ca/: apps.c  apps.h  ca.c  e_os.h  ocsp.c
src/security/struct/: security_struct.c  security_struct.h
src/security/tpm/: e_tpm_err.c  tpmapi.c  tpmapi.h
src/server/: online_charge.c  online_charge.h  server.c  server.h
src/server/pbc/: pbc.c  pbc.h
src/server/pbc/agent/: upload_agent.c  upload_agent.h
src/server/struct/: server_struct.c  server_struct.h
src/system/: resource.c  resource.h
